[package]
name = "imgui_sdl2_renderer"
version = "0.0.1-alpha0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui = "0.8.2"
memoffset = "0.6.5"
sdl2 = { git="https://github.com/Rust-SDL2/rust-sdl2", version="0.35.2"}